load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "import_dll")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

filegroup(
    name = "krpc2",
    srcs = [
        ":copy_google_protobuf",
        ":copy_krpc2",
        ":copy_krpc2_spacecenter",
        ":copy_krpc2_swinfo",
        ":copy_krpc_core",
        ":copy_krpc_io_ports",
    ],
)

copy_file("copy_krpc_core", "@krpc_core//core", "kRPC2/KRPC.Core.dll")

copy_file("copy_krpc2", "//server", "kRPC2/KRPC2.dll")

copy_file("copy_krpc2_swinfo", "//server:swinfo", "kRPC2/swinfo.json")

copy_file("copy_krpc2_spacecenter", "//service/spacecenter", "kRPC2/KRPC2.SpaceCenter.dll")

copy_file("copy_google_protobuf", "@krpc_core//:google_protobuf_dll", "kRPC2/Google.Protobuf.dll")

copy_file("copy_krpc_io_ports", "@krpc_core//:krpc_io_ports_dll", "kRPC2/KRPC.IO.Ports.dll")

import_dll(
    name = "bepinex",
    dll = "@spacewarp//:BepInEx/core/BepInEx.dll",
    visibility = ["//visibility:public"],
)

import_dll(
    name = "spacewarp",
    dll = "@spacewarp//:BepInEx/plugins/SpaceWarp/SpaceWarp.dll",
    visibility = ["//visibility:public"],
)
