load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//lib:ksp2.bzl", "ksp2_deps")
load("//:config.bzl", "version")

csharp_library(
    name = "server",
    srcs = [":assembly_info"] + glob(["src/**/*.cs"]),
    out = "KRPC2",
    private_deps = ksp2_deps,
    target_frameworks = ["netstandard2.1"],
    visibility = ["//visibility:public"],
    deps = [
        "//:bepinex",
        "//:spacewarp",
        "@krpc_core//core",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

expand_template(
    name = "swinfo",
    out = "swinfo.json",
    substitutions = {"{VERSION}": version},
    template = "swinfo.json.tmpl",
    visibility = ["//visibility:public"],
)
